# dsa

./: .gitignore  pyproject.toml
dsa/array/: find_max_min.py  max_subarray_sum.py  reverse_array.py  rotate_right.py  trap_rain_water.py
dsa/ds/array/: remove_duplicates.py
tests/array/: test_find_max_min.py  test_max_subarray_sum.py  test_remove_duplicates.py  test_reverse_array.py  test_rotate_right.py  test_trap_rain_water.py
tests/ds/array/: test_find_max_min.py  test_remove_duplicates.py
